# phantomshell

./: .floo  .gitignore  CMakeLists.txt  Doxygen.cfg  README.md  build.gradle  build.sh  generate.sh  gprof.sh  sonar.sh
docs/: Home.md
docs/markdown/: Appendix.CodeStyle.md  BNF.md  Bytecode.md  CodeStyle.md
docs/plain/: Phantom Shell. Arrays.md  Phantom Shell. Bitwise operations.txt  (+10 more)
src/: CMakeLists.txt  compiler.c  compiler.h  compiler_emit.c  compiler_expr.c  compiler_func.c  compiler_scope.c  compiler_stat.c  compiler_vars.c  executor.c  lexer.c  lexer.h  lexer.l  lib.h  main.c  opcodes.h  operator.h  parser.c  parser.h  parser.y  types.c  types.h  y.tab.h
src/ExpressionEvaluator/: ExpressionEvaluator.java
src/ExpressionParser/: Character.java  ExpressionParser.java  Operator.java  Test.java
src/environment/: Environment.java
src/expressionEvaluator/: ExpressionEvaluator.java
src/expressionParser/: ExpressionParser.java  Test.java
src/main/phantom/shell/: .gitignore  Boot.java  PhantomShell.java
src/main/phantom/shell/calculator/: ExpressionEvaluationException.java  ExpressionEvaluationFault.java  ExpressionEvaluator.java  ExpressionHandler.java  ExpressionParser.java  ExpressionToken.java
src/main/phantom/shell/distributor/: Distributor.java
src/main/phantom/shell/environment/: Environment.java  EnvironmentException.java
src/main/phantom/shell/executor/: ExecutionFault.java  ExecutionFaultException.java  Executor.java
src/main/phantom/shell/expressionEvaluator/: ExpressionEvaluationException.java  ExpressionEvaluator.java
src/main/phantom/shell/expressionHandler/: ExpressionHandler.java
src/main/phantom/shell/expressionParser/: ExpressionParser.java  Test.java
src/main/phantom/shell/expressions/: BlockExpression.java  CallExpression.java  DefExpression.java  EmptyExpression.java  Expression.java  ExpressionTypes.java  FunctionExpression.java  IfExpression.java  MethodExpression.java  OperatorExpression.java  PrintExpression.java  PrintlnExpression.java  ValueExpression.java  WhileExpression.java
src/main/phantom/shell/interpreter/calculator/: ExpressionEvaluationException.java  ExpressionEvaluationFault.java  ExpressionEvaluator.java  ExpressionHandler.java  ExpressionParser.java  ExpressionToken.java
src/main/phantom/shell/interpreter/environment/: Environment.java  EnvironmentException.java
src/main/phantom/shell/interpreter/executor/: ExecutionFault.java  ExecutionFaultException.java  Executor.java
src/main/phantom/shell/interpreter/printer/: Printer.java
src/main/phantom/shell/libs/: GetOpt.java
src/main/phantom/shell/parser/: InvalidTokenException.java  Lexer.java  ParseFault.java  Parser.java  Scanner.java  Token.java  TokenType.java
src/main/phantom/shell/printer/: Printer.java
src/main/phantom/shell/structures/: Character.java  Function.java  Keyword.java  Operator.java
src/main/phantom/shell/values/: BoolValue.java  FloatValue.java  FunctionValue.java  IntValue.java  ObjectValue.java  StringValue.java  Value.java  VoidValue.java
src/main/phantom/support/io/: BufferedInputStream.java  File.java  FileInputStream.java  FileNotFoundException.java  IOException.java  InputStream.java  OutputStream.java  PrintStream.java
src/main/phantom/support/lang/: ArithmeticException.java  ArrayOutOfBoundsException.java  NullPointerException.java  RuntimeException.java  StringBuilder.java
src/main/phantom/support/log/: Log.java
src/main/phantom/support/util/: ArrayList.java  HashMap.java  LinkedList.java  List.java  Pair.java
src/phlib/: Alloc.cpp  Alloc.h  CMakeLists.txt  Character.h  CxxABI.cpp  IStream.cpp  IStream.h  Io.h  Log.h  OStream.cpp  OStream.h  Phlib.h  String.cpp  String.h  Types.h  alloc.cpp  istream.cpp  ostream.cpp  string.cpp
src/phlib/allocator/: PoolAllocator.cpp  SystemAllocator.cpp  pool_allocator.cpp  system_allocator.cpp
src/phlib/headers/: Allocator.h  Character.h  InputStream.h  Log.h  OutputStream.h  PhantomIO.h  PhantomLib.h  String.h  alloc.h  character.h  istream.h  log.h  ostream.h  phio.h  phlib.h  string.h  types.h
src/phlib/sources/: Allocator.cpp  InputStream.cpp  OutputStream.cpp  String.cpp  alloc.cpp  istream.cpp  ostream.cpp  string.cpp
src/phlib/sources/allocator/: SystemAllocator.cpp  pool_allocator.cpp  system_allocator.cpp
src/shell/: CMakeLists.txt  Keyword.h  Lexer.cpp  Lexer.h  Operator.h  Parser.cpp  Parser.h  PhantomShell.cpp  PhantomShell.h  PshTypes.h  Token.cpp  Token.h  Tree.cpp  Tree.h  lexer.cpp  parser.cpp  phantom_shell.cpp  token.cpp
src/shell/headers/: Keyword.h  Lexer.h  Parser.h  PhantomShell.h  PhantomShellTypes.h  Token.h  Tree.h  keyword.h  lexer.h  operator.h  parser.h  phantom_shell.h  psh_types.h  shell_types.h  token.h  tree.h
src/shell/headers/tree/: tree.h  tree_common.h  tree_expression.h  tree_literal.h  tree_statement.h
src/shell/sources/: Lexer.cpp  Parser.cpp  PhantomShell.cpp  Token.cpp  Tree.cpp  lexer.cpp  parser.cpp  phantom_shell.cpp  token.cpp  tree.cpp
src/structures/: Character.java
src/test/io/: InputStreamTest.java
src/test/java/: ArgumentedRun.java
src/test/java/executor/: ExecutorTest.java
src/test/java/expressionEvaluation/: ExpressionEvaluationTests.java
src/test/java/io/: BufferedInputStreamTest.java  CharsetTests.java  InputStreamTest.java  OutputStreamTest.java
src/test/java/lexer/: LexerPerformanceTest.java  LexerStructuresTest.java
src/test/java/parser/: ParserPerformanceTest.java  ParserSimpleTest.java
src/test/scripts/: function_test.psh  lexer_performance_test.psh  lexer_structures_test.psh  parser_simple_test.psh  test1.psh  test2.psh  test_unary.psh
src/tests/: CMakeLists.txt
src/tests/phlib/: CMakeLists.txt  allocators_tests.cpp  istream_tests.cpp  string_tests.cpp
src/tests/shell/: CMakeLists.txt  lexer_tests.cpp
src/tests/sources/phlib/: allocators_tests.cpp  istream_tests.cpp  phlib_tests.cpp  string_tests.cpp
src/tests/sources/shell/: lexer_tests.cpp  parser_tests.cpp
src/util/: gdb_utils.c  gdb_utils.h  hashmap.c  hashmap.h
src/vm/: builtins.c  opcodes.h  runtime.h  vm.c  vm.h
(+61 files in other folders)
